--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "node",
-  "version": "1.0.1",
-  "description": "",
+  "version": "1.0.2",
+  "description": "This is a test application",
   "main": "app.js",
   "scripts": {
+    "serve": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Brandon McCarthy",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
     "mongodb": "^3.6.0",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "socket.io": "^2.3.0"
   }
 }
